# brandkit

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  brand_generator.py  domain_checker.py  euipo_checker.py  generate.py  llm_generator.py  markov_generator.py  namedb.py  pyproject.toml  rapidapi_checker.py  settings.py  similarity_checker.py
brandkit/: __init__.py  __main__.py  calibration.py  cli.py  config.py  db.py  eu_trademark_analysis.py  meaning_generator.py  parallel.py  phonetic_similarity.py  profiler.py  quality.py  settings.py  trademark_queries.py  ui.py
brandkit/checkers/: __init__.py
brandkit/configs/: app.yaml
brandkit/generators/: __init__.py  base_generator.py  cultural_generators.py  entropy.py  greek_generator.py  nordic_generator.py  turkic_generator.py
brandkit/generators/phonemes/: __init__.py  animals.yaml  base_generator.yaml  celestial.yaml  celtic.yaml  greek.yaml  hazards.yaml  industries.yaml  japanese.yaml  landmarks.yaml  latin.yaml  mythology.yaml  nordic.yaml  phonaesthemes.yaml  rule_based.yaml  strategies.yaml  turkic.yaml
tests/: conftest.py  test_brandkit.py  test_cache_behavior.py  test_cli.py  test_cultural_generators.py  test_database.py  test_db_schema.py  test_discovery_pipeline.py  test_domain_cache.py  test_hazard_checker.py  test_memorability.py  test_network_timeout.py  test_phonaesthetics.py  test_phonetics_en_de.py  test_quality_filter.py  test_similarity_checker.py
